Creating Splash Screen Button

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/shoe_ui/5.png
     - assets/shoe_ui/6.png
     - assets/shoe_ui/7.png
+    - assets/shoe_ui/8.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
