adding splash image

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
     - assets/city_tour/singapore.jpg
     - assets/city_tour/tokyo_japan.jpg
     - assets/city_tour/syndey.jpg
-    
+    - assets/furniture/splash.jpg
       #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
