--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_fadein: ^2.0.0
   page_transition: ^2.1.0
   uuid: ^4.2.2
 
@@ -69,7 +70,7 @@ flutter:
     - assets/city_tour/syndey.jpg
     - assets/furniture/splash.jpg
     - assets/furniture/icons/right-down.png
-      #   - images/a_dot_ham.jpeg
+    #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
