--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,14 @@ flutter:
     - assets/city_tour/syndey.jpg
     - assets/furniture/splash.jpg
     - assets/furniture/icons/right-down.png
+    - assets/furniture/icons/arrow-long-left.svg
+    - assets/furniture/icons/bag.svg
+    - assets/furniture/icons/check.svg
+    - assets/furniture/icons/home.svg
+    - assets/furniture/icons/menu.svg
+    - assets/furniture/icons/scan.svg
+    - assets/furniture/icons/search.svg
+    - assets/furniture/icons/user.svg
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
