--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ flutter:
     - assets/furniture/icons/scan.svg
     - assets/furniture/icons/search.svg
     - assets/furniture/icons/user.svg
+    - assets/furniture/icons/spinner.gif
+    - assets/furniture/icons/ripple.gif
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
