--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_fadein: ^2.0.0
+  flutter_svg: ^2.0.9
+  google_fonts: ^6.1.0
   page_transition: ^2.1.0
   uuid: ^4.2.2
 
