--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
   http: ^1.1.2
+  liquid_swipe: ^3.1.0
   page_transition: ^2.1.0
   uuid: ^4.2.2
 
