--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,9 @@ flutter:
     - assets/furniture/icons/user.svg
     - assets/furniture/icons/spinner.gif
     - assets/furniture/icons/ripple.gif
+    - assets/travel_ui/payment.png
+    - assets/travel_ui/relax.png
+    - assets/travel_ui/travel.png
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
