--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.2
   liquid_swipe: ^3.1.0
   page_transition: ^2.1.0
+  simple_shadow: ^0.3.1
   uuid: ^4.2.2
 
 dev_dependencies:
