--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   flutter_fadein: ^2.0.0
   flutter_svg: ^2.0.9
+  get: ^4.6.6
   google_fonts: ^6.1.0
   http: ^1.1.2
   liquid_swipe: ^3.1.0
