--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animate_do: ^3.1.2
+  badges: ^3.1.2
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
