--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ flutter:
     - assets/furniture_grid/6.jpg
     - assets/furniture_grid/7.jpg
     - assets/furniture_grid/8.jpg
+    - assets/furniture_grid/9.jpg
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
