--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   liquid_swipe: ^3.1.0
   page_transition: ^2.1.0
   simple_shadow: ^0.3.1
+  staggered_grid_view_flutter: ^0.0.4
   uuid: ^4.2.2
 
 dev_dependencies:
