--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,10 @@ flutter:
     - assets/furniture_grid/7.jpg
     - assets/furniture_grid/8.jpg
     - assets/furniture_grid/9.jpg
+
+    #form 
+    - assets/form/1.jpg
+    - assets/form/2.jpg
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
