--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_animated_button: ^2.0.3
   flutter_fadein: ^2.0.0
   flutter_svg: ^2.0.9
-  #fluttertoast: ^8.2.4
   font_awesome_flutter: ^10.6.0
   get: ^4.6.6
   google_fonts: ^6.1.0
@@ -106,7 +106,7 @@ flutter:
     - assets/furniture_grid/8.jpg
     - assets/furniture_grid/9.jpg
 
-    #form 
+    #form
     - assets/form/1.jpg
     - assets/form/2.jpg
     #   - images/a_dot_ham.jpeg
