--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   simple_shadow: ^0.3.1
   staggered_grid_view_flutter: ^0.0.4
   uuid: ^4.2.2
+  vertical_card_pager: ^1.5.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
