--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,12 @@ flutter:
     - assets/social_net/1.png
     - assets/social_net/2.png
     - assets/social_net/3.png
+
+    # watch
+    - assets/smart/calendar.jpg
+    - assets/smart/music.jpg
+    - assets/smart/settings.jpg
+    - assets/smart/alarm.jpg
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
