--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.1.0
   http: ^1.1.2
+  iconsax: ^0.0.8
   liquid_swipe: ^3.1.0
   page_transition: ^2.1.0
   simple_shadow: ^0.3.1
