--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   iconsax: ^0.0.8
   liquid_swipe: ^3.1.0
   page_transition: ^2.1.0
+  readmore: ^3.0.0
   simple_shadow: ^0.3.1
   staggered_grid_view_flutter: ^0.0.4
   uuid: ^4.2.2
