--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animate_do: ^3.1.2
   animations: ^2.0.11
+  auto_size_text: ^3.0.0
   badges: ^3.1.2
   cupertino_icons: ^1.0.2
   flutter:
