--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   auto_size_text: ^3.0.0
   badges: ^3.1.2
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.30.1
   flutter:
     sdk: flutter
   flutter_animated_button: ^2.0.3
