--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   auto_size_text: ^3.0.0
   badges: ^3.1.2
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.19.4
   firebase_core: ^2.30.1
+  firebase_storage: ^11.7.4
   flutter:
     sdk: flutter
   flutter_animated_button: ^2.0.3
@@ -41,6 +43,7 @@ dependencies:
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.6.0
   get: ^4.6.6
+  get_storage: ^2.1.1
   google_fonts: ^6.1.0
   http: ^1.1.2
   iconsax: ^0.0.8
