Uploading assets and pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -129,6 +129,9 @@ flutter:
     - assets/smart/music.jpg
     - assets/smart/settings.jpg
     - assets/smart/alarm.jpg
+
+    # coffee 
+    - assets/coffee_shop/
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
