--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   google_fonts: ^6.1.0
+  google_nav_bar: ^5.0.6
   http: ^1.1.2
   iconsax: ^0.0.8
   liquid_swipe: ^3.1.0
@@ -132,6 +133,7 @@ flutter:
 
     # coffee
     - assets/coffee_shop/
+    - assets/coffee_shop/animation/
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
