--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   get: ^4.6.6
   get_storage: ^2.1.1
+  glossy: ^0.0.4
   google_fonts: ^6.1.0
   google_nav_bar: ^5.0.6
   http: ^1.1.2
