--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -136,6 +136,7 @@ flutter:
     # coffee
     - assets/coffee_shop/
     - assets/coffee_shop/animation/
+    - assets/coffee_shop/products/png/
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
