--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   animations: ^2.0.11
   auto_size_text: ^3.0.0
   badges: ^3.1.2
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.19.4
   firebase_core: ^2.30.1
