--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -141,6 +141,7 @@ flutter:
 
     #minimal
     - assets/minimal_shop/
+    - assets/minimal_shop/products/
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
