--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   iconsax: ^0.0.8
   liquid_swipe: ^3.1.0
   page_transition: ^2.1.0
+  provider: ^6.1.2
   read_more_text: ^0.0.5
   readmore: ^3.0.0
   simple_shadow: ^0.3.1
