--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animate_do: ^3.3.4
+  animated_read_more_text: ^0.0.6
   animations: ^2.0.11
   auto_size_text: ^3.0.0
   badges: ^3.1.2
