--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   http: ^1.2.1
   iconsax: ^0.0.8
+  liquid_pull_to_refresh: ^3.0.1
   liquid_swipe: ^3.1.0
   page_transition: ^2.1.0
   provider: ^6.1.2
