adding image to progject

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -148,6 +148,9 @@ flutter:
     #minimal
     - assets/minimal_shop/
     - assets/minimal_shop/products/
+
+    #dashboard
+    - assets/dashboard/
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
