--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   badges: ^3.1.2
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
+  drop_shadow: ^0.1.0
   firebase_auth: ^4.19.4
   firebase_core: ^2.30.1
   firebase_storage: ^11.7.4
