--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -152,7 +152,7 @@ flutter:
 
     #dashboard
     - assets/dashboard/icons/
-    - asssets/dashboard/users/
+    - assets/dashboard/users/
 
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
