--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.19.4
   firebase_core: ^2.30.1
   firebase_storage: ^11.7.4
+  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_animated_button: ^2.0.3
