--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   liquid_swipe: ^3.1.0
   page_transition: ^2.1.0
+  percent_indicator: ^4.2.3
   provider: ^6.1.2
   read_more_text: ^0.0.5
   readmore: ^3.0.0
