--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   shadow: ^1.5.0
   simple_shadow: ^0.3.1
   staggered_grid_view_flutter: ^0.0.4
+  url_launcher: ^6.3.0
   uuid: ^4.2.2
   vertical_card_pager: ^1.5.0
 
