--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
     sdk: flutter
   flutter_animated_button: ^2.0.3
   flutter_fadein: ^2.0.0
+  flutter_phone_direct_caller: ^2.1.1
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.6.0
   get: ^4.6.6
