--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_animated_button: ^2.0.3
   flutter_fadein: ^2.0.0
   flutter_phone_direct_caller: ^2.1.1
+  flutter_slidable: ^3.1.0
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.6.0
   get: ^4.6.6
