--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -146,6 +146,7 @@ flutter:
 
     #grocery UI
     - assets/grocery/splash_main.jpg
+    - assets/grocery/grocery_app_banner.jpg
     - assets/grocery/products/
     #   - images/a_dot_ham.jpeg
   
