--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_fadein: ^2.0.0
   flutter_phone_direct_caller: ^2.1.1
   flutter_slidable: ^3.1.0
+  flutter_staggered_animations: ^1.1.1
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.6.0
   get: ^4.6.6
@@ -146,6 +147,7 @@ flutter:
     #grocery UI
     - assets/grocery/splash_main.jpg
     - assets/grocery/grocery_app_banner.jpg
+    - assets/grocery/logo.png
     - assets/grocery/products/
     - assets/grocery/category/
     #   - images/a_dot_ham.jpeg
