--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -155,6 +155,7 @@ flutter:
 
     #grocery2 UI
     - assets/grocery2/splash_main.jpg
+    - assets/grocery2/products/
     #   - images/a_dot_ham.jpeg
   # example:
   # fonts:
