--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ui_design
 description: "A new Flutter project."
 
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+# Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
@@ -50,6 +50,7 @@ dependencies:
   readmore: ^3.0.0
   shadow: ^1.5.0
   simple_shadow: ^0.3.1
+  simple_animations: ^5.0.2
   staggered_grid_view_flutter: ^0.0.4
   url_launcher: ^6.3.0
   uuid: ^4.2.2
