--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   vertical_card_pager: ^1.5.0
   video_player: ^2.9.1
   flutter_load_kit: ^0.0.2
+  flutter_verification_code: ^1.1.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
