--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   video_player: ^2.9.1
   flutter_load_kit: ^0.0.2
   flutter_verification_code: ^1.1.7
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
