--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get_storage: ^2.1.1
   glass: ^2.0.0+1
   glossy: ^0.0.4
+  
 
   google_nav_bar: ^5.0.6
   http: ^0.13.0
@@ -58,6 +59,7 @@ dependencies:
   flutter_load_kit: ^0.0.2
   flutter_verification_code: ^1.1.7
   flutter_staggered_grid_view: ^0.7.0
+  flutter_paystack: ^1.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
