--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_verification_code: ^1.1.7
   flutter_staggered_grid_view: ^0.7.0
   flutter_paystack: ^1.0.7
+  quick_actions: ^1.0.8
 
 dev_dependencies:
   flutter_lints: ^2.0.0
