--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
 
   quick_actions: ^1.0.8
+  flutter_feather_icons: ^2.0.0+1
+  google_fonts: ^4.0.4
+  get_it: ^8.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
